--- a/Kaiserreich Korean Translation/localisation/KR_Papal_State_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Papal_State_l_english.yml
@@ -90,14 +90,14 @@ PAP_call_faithful:0 "신도 소집"
 PAP_call_faithful_desc:0 "기독교 자체의 핵심은 신이없는 생 디칼리스트들에 의해 위협 받고 있습니다. 적과 너무 가까이서 교황청과 가까운 로마 교황청과 교황청은 라테 란 궁전이 우리의 사악한 적들에게 영향을받지 않도록 모든 힘을 다하여 싸워야합니다."
 PAP_holy_war:0 "성전"
 PAP_holy_war_desc:0 "교황청이 하나님과 미덕의 수호자로서의 역할을 수행하고 사람들이 생디칼리즘에 반대하는 11 번째 십자군에서 봉사하기 위해 올 때가 왔습니다."
-PAP_temporal_power:0 "세속적인 힘 강화"
-PAP_temporal_power_desc:0 "사회의 세속화가 진행됨에 따라 교황의 영향력이 약화되었다. 그러나 우리의 범위 안에서 그의 영향력을 강화할 수있는 방법이 있습니다."
+PAP_temporal_power:0 "세속적 권력 강화"
+PAP_temporal_power_desc:0 "사회의 세속화가 진행됨에 따라 교황의 영향력이 약화되었습니다. 그러나 우리의 범위 안에서 그의 영향력을 강화할 수 있는 방법이 있습니다."
 PAP_condemn_mobrule:0 "마피아의 규칙을 비난"
-PAP_condemn_mobrule_desc:0 "생디칼리즘은 모든 거룩한 것들의 채찍입니다. 카톨릭 신자가 생디칼리즘 운동에 참여하게하는 것은 받아 들일 수 없다. 교황은 이것을 분명히하기 위해 회보를 출판해야합니다."
+PAP_condemn_mobrule_desc:0 "생디칼리즘은 모든 거룩한 것들의 채찍입니다. 카톨릭 신자가 생디칼리즘 운동에 참여하는 것은 있을 수 없습니다. 교황 성하는 이것을 분명히 하기위해 회보를 내실 것입니다."
 PAP_strengthen_border:0 "국경 강화"
 PAP_strengthen_border_desc:0 "침략이 오면, 남부의 사악한 생디칼리스트가 될 것입니다. 국경을 강화하고 맹공격을 견뎌야합니다."
-PAP_roman_senate:0 "Senatus Populusque Rōmanus"
-PAP_roman_senate_desc:0 "새로운 교황이 교황청의 행정부를 국민들에게 위임하기로 결정 했으므로 우리는 수세기 만에 처음으로 Senatus Romanus를 다시 불러올 수 있었고 로마의 영광이 다시 태어 났음을 의미합니다."
+PAP_roman_senate:0 "로마의 원로원과 인민들"
+PAP_roman_senate_desc:0 "새로운 교황이 교황청의 행정을 국민들에게 위임하기로 결정했으므로 우리는 수세기 만에 처음으로 로마 원로원을 복원할 수 있었고, 이는 옛 로마의 영광이 부활했음을 의미합니다."
 PAP_general_election:0 "총선거 요청"
 PAP_general_election_desc:0 "로마 상원의 부흥에 이어 로마에 민주주의를 가져올 다음 단계는 부흥 된 로마를 현대 국가로 관리하고 개발하는 임무를 총괄하는 민간 정부를 선출하는 총선을 요구하는 것입니다."
 PAP_civilian_government:0 "민간 정부 구성"
@@ -130,14 +130,14 @@ PAP_heavy_industry:0 "중공업 유치"
 PAP_heavy_industry_desc:0 "로마를 위한 효과적인 군사력이되기 위해서는 우리 군대가 우리의 적보다 크고 강한 군대뿐만 아니라 현대 군사 장비 구축을 위한 강철과의 전투에서 지원할 포병, 차량 및 기갑을 만들 필요가 있습니다. 이를 위해서는 중공업 생산을 장려하고 장려하기 위해 법률 및 지출을 조정해야합니다."
 PAP_airfield_expansion:0 "군사 비행장 확장"
 PAP_airfield_expansion_desc:0 "우리의 공군 지도자들은 오랫동안 추가 자금을 요구 해왔다. 우리의 공군 기지는 실제로 확장이 필요합니다."
-PAP_roman_army:0 "로마 군대"
+PAP_roman_army:0 "로마 육군"
 PAP_roman_army_desc:0 "우리의 전 정부는 전쟁의 가능성과 양 시칠리아 왕국의 보호에 확신을 가지고 군대에 많은 투자를하지 않았으므로 작은 팔라티노 명예 경비대에게 국방을 맡겼습니다. 전쟁이 필연적으로되고있는 상황에서 우리 군대는 로마의 유산을 계승하기에 적합하고 시칠리아 보호에 의지하지 않는 것이 필수적입니다."
 PAP_armed_citizenry:0 "시민 무장"
 PAP_armed_citizenry_desc:0 "로마가 북부 주민들 또는 추방 된 사보이로부터 독립을 보호한다면, 시민들은 침입하는 군대에 저항 할 준비를해야합니다. 스위스 방위대로부터 영감을 얻어 우리 시민들이 개인용 소총과 탄약을 소유하고 정기적 인 전투 및 사격 훈련에 참여하여 시간이되면 효과적으로 싸울 수있는 스위스 스타일 민병대 시스템을 구현할 수 있습니다."
 PAP_industry_captains:0 "업계의 주장"
 PAP_industry_captains_desc:0 "로마가 세계에서 가장 위대한 힘을 가진 시대는 끝났지 만 가능한 한 로마 경제를 육성해야합니다. 이 시대의 가장 큰 경제적 강점은 비오 11세의 이전 정부가 부정적으로보고 격려하기를 꺼려했던 산업입니다. 로마가 새로운 통치하에 있기 때문에 우리는 이러한 이전 정책을 취소하고 로마 산업이 번성하도록해야합니다."
-PAP_men_of_rome:0 "로마 사람들"
-PAP_men_of_rome_desc:0 "우리 민족이 침략 당하면 게릴라전과 점령군을 뒤엎고 매복하는 데 필요한 모든 수단을 동원하여 침략자들을 저항하고 몰아 내기 위해 로마에있는 모든 사람이 반드시 준비되어 있어야합니다."
+PAP_men_of_rome:0 "로마 시민들"
+PAP_men_of_rome_desc:0 "우리가 침략당했을 때 게릴라전과 점령군을 뒤엎고 매복하는 데 필요한 모든 수단을 동원하여 침략자들에게 저항하고 몰아내기 위해, 로마의 모든 시민들은 언제라도 반드시 준비되어 있어야 합니다."
 PAP_legionary_spirit:0 "군대 정신"
 PAP_legionary_spirit_desc:0 "로마 군단의 규율, 조직, 끈기 및 동기 부여를 통해 로마는 이탈리아의 도시 국가에서 세계 최고의 권력자가되었고 영원히 역사에 영광스러운 표시를 남겼습니다. 이 불안정한시기에 우리는이 전설적인 규율을 되살려야하며 국제적으로 로마의 군대를 다시 한번 유명하게해야합니다."
 PAP_army_reorganisation:0 "군대 개편"
