--- a/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
@@ -525,31 +525,31 @@ part.117.t:0 "런던의 괴뢰 정부"
 part.117.d:0 "런던의 새 정부는 우리 통제 하에 있습니다."
 part.117.a:0 "팍스 유로파!"
 
-part.118.t:0 "Should Britain become a monarchy?"
+part.118.t:0 "영국이 왕정국가가 되야할까요?"
 part.118.d:0 "As we are establishing the new government of Great Britain we have the opportunity to install a new King of Great Britain. It may, however, be wise to let the British choose their own government lest they rise against us."
-part.118.a:0 "Recreate the United Kingdom!"
-part.118.b:0 "Let Great Britain become a republic instead."
+part.118.a:0 "영국을 원상복귀 시킨다!"
+part.118.b:0 "영국이 공화국이 되도록 두자."
 
 part.119.t:0 "Russia has imposed a King on us"
 part.119.d:0 "We will become a monarchy again."
 part.119.a:0 "빌헬름 5세 만세!"
 
-part.120.t:0 "Russia let us choose our new President"
+part.120.t:0 "러시아가 새로운 대통령을 선택하도록 두었습니다"
 part.120.d:0 "우린 다시 공화국이 되었습니다."
-part.120.a:0 "All hail our new president!"
+part.120.a:0 "새로운 대통령을 향해 충성!"
 
 part.121.t:0 "잉글랜드"
 part.121.d:0 "England is the industrial and overall economic heartland of Great Britian. An occupied England would be a logistical nightmare because of the immense size of the London metropolitan area. Instead, we can establish a puppet state in England. What should we do?"
-part.121.a:0 "Establish a friendly England."
+part.121.a:0 "친선 잉글랜드를 설립하라."
 part.121.b:0 "잉글랜드를 완전히 점령한다!"
 
 part.122.t:0 "자유다!"
 part.122.d:0 "우리는 다시 한번 자유를 찾았습니다. 러시아의 감시 아래에서 말이죠."
-part.122.a:0 "What happened to the Union of 1707?"
+part.122.a:0 "1707년의 연합에 무슨 일이 있던거지?"
 
 part.123.t:0 "자유다!"
 part.123.d:0 "우리는 다시 한번 자유를 찾았습니다. 러시아의 감시 아래에서 말이죠."
-part.123.a:0 "What happened to the Union of 1707?"
+part.123.a:0 "1707년의 연합에 무슨 일이 있던거지?"
 
 part.124.t:0 "런던의 괴뢰 정부"
 part.124.d:0 "런던의 새 정부는 우리 통제 하에 있습니다!"
@@ -558,7 +558,7 @@ part.124.a:0 "팍스 유로파!"
 part.125.t:0 "웨일스"
 part.125.d.england:0 "The Welsh people have been under direct English rule for several centuries but because of its extensive coal deposits we have kept it detached from England and several magnates wish to keep it this way. However, as England is now a free nation, Wales could just as well become one too but its economy would fairly weak. Because of that several ministers have suggested that we return it to England. What should we do?"
 part.125.d.no_england:0 "The Welsh people have been under direct English rule for several centuries but because of its extensive coal deposits we have kept it detached from England and several magnates wish to keep it this way. Since we're now occupying the English lands it would make sense to continue occupying the coal deposits of Wales too but we could also thank them for their loyalty by installing a local puppet government there. What should we do?"
-part.125.a:0 "Freedom for the Welsh!"
+part.125.a:0 "웨일스에게 자유를!"
 part.125.b:0 "잉글랜드에게 반환한다."
 part.125.c:0 "웨일즈를 완전히 점령한다!"
 
@@ -619,26 +619,26 @@ occupy_rhine:0 "라인란트 점령"
 russian_dominance:0 "러시아 영향권"
 
 ### Opinion Modifiers ###
-GER_accept_deal_rus:0 "Accepted the Russian deal"
-GER_refuse_deal_rus1:0 "Refused the Russian deal"
-GER_refuse_deal_rus2:0 "Refused the Russian deal"
-chose_our_hos:0 "Chose our Head of State"
-let_us_choose_our_hos:0 "Let us choose our Head of State"
-SWI_gave_back_romandy:0 "Gave us Romandie back"
-SWI_not_gave_back_romandy:0 "Refused to hand us Romandie back"
-BEL_forced_eupen1:0 "Forced us to give out Eupen"
-BEL_forced_eupen2:0 "Forced us to give out Eupen"
-FRP_forced_alsace1:0 "Forced us to give out Alsace-Lorraine"
-FRP_forced_alsace2:0 "Forced us to give out Alsace-Lorraine"
-FRP_forced_alsace3:0 "Forced us to give out Alsace-Lorraine"
-GER_left_us_luxembourg:0 "Left us Luxemburg"
-GER_free_order_luxembourg:0 "Liberated Luxemburg"
-DEN_forced_schleswig1:0 "Forced us to give out Northern Schleswig"
-DEN_forced_schleswig2:0 "Forced us to give out Northern Schleswig"
-PSS_forced_thuringia1:0 "Forced us to give out Thuringia"
-PSS_forced_thuringia2:0 "Forced us to give out Thuringia"
-GER_liberated_UK:0 "Germany liberated the United Kingdom"
-GER_created_republic_GBR:0 "Germany created the British Republic"
+GER_accept_deal_rus:0 "러시안 딜을 받아들임"
+GER_refuse_deal_rus1:0 "러시안 딜을 거부함"
+GER_refuse_deal_rus2:0 "러시안 딜을 거부함"
+chose_our_hos:0 "우리의 국가원수를 선택함"
+let_us_choose_our_hos:0 "국가원수를 선택하도록 내버려둠"
+SWI_gave_back_romandy:0 "로망디 반환을 거부함"
+SWI_not_gave_back_romandy:0 "로망디 반환을 거부함"
+BEL_forced_eupen1:0 "외펜을 빼앗음"
+BEL_forced_eupen2:0 "외펜을 빼앗음"
+FRP_forced_alsace1:0 "알자스-로렌을 빼앗음"
+FRP_forced_alsace2:0 "알자스-로렌을 빼앗음"
+FRP_forced_alsace3:0 "알자스-로렌을 빼앗음"
+GER_left_us_luxembourg:0 "룩셈부르크를 저버림"
+GER_free_order_luxembourg:0 "룩셈부르크가 해방됨"
+DEN_forced_schleswig1:0 "북부 슐레히비히를 빼앗음"
+DEN_forced_schleswig2:0 "북부 슐레히비히를 빼앗음"
+PSS_forced_thuringia1:0 "튀링겐을 빼앗음"
+PSS_forced_thuringia2:0 "튀링겐을 빼앗음"
+GER_liberated_UK:0 "독일이 영국을 해방시킴"
+GER_created_republic_GBR:0 "독일이 브리티시 공화국을 세움"
 NFA_refused_deal_GER1:0 "National France refused the deal"
 NFA_refused_deal_GER2:0 "National France refused the deal"
 NFA_accepted_deal_GER:0 "National France accepted the deal"
@@ -647,5 +647,5 @@ GER_ceded_flawa_claim:0 "Ceded French Flanders"
 GER_refused_flawa_claim:0 "Refused to cede French Flanders"
 BEL_ceded_flanders1:0 "Ceded French Flanders"
 BEL_ceded_flanders2:0 "Ceded French Flanders"
-GER_asked_join_entente:0 "Germany asked to join the Entente"
-GER_joined_entente_op:0 "Germany joined the Entente"
+GER_asked_join_entente:0 "독일이 협상국 가입을 원함"
+GER_joined_entente_op:0 "독일이 협상국에 가입함"
