--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -37,7 +37,7 @@ CAN_NO_RET_NE:0 "캐나다가 뉴잉글랜드를 돌려주지 않았다"
 GER_help_TEX:0 "독일이 자원병을 보내주다"
 RUS_help_USA:0 "러시아가 자원병을 보내주다"
 RUS_help_TEX:0 "러시아가 자원병을 보내주다"
-SOV_help_아메리카 노동 연맹:0 "소비에트 연방이 자원병을 보내주다"
+SOV_help_CSA:0 "소비에트 연방이 자원병을 보내주다"
 JAP_help_CAL:0 "일본이 자원병을 보내주다"
 supplies_arrived:0 "그들의 보급품이 도착했다"
 victory_ACW:0 "우리는 미국 내전에서 승리했습니다"
