--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -71,7 +71,7 @@ AST_depression_1_desc:0 "오스트랄라시아의 경제는 결코 튼튼하다 
 AST_depression_2:0 "불황에서 회복하다"
 AST_depression_2_desc:0 "오스트랄라시아의 경제는 결코 튼튼하다 할 수 없었으며, 대전의 여파는 경제를 훨씬 더 악화시켰을 뿐입니다. 기회는 존재하지 않았고, 사람들은 직업을 찾을 수 없었습니다. 보다 극단적인 해결책이 고려되기 시작함에 따라 극단주의자들이 전국에 뿌리를 내리기 시작했습니다."
 AST_bled_dry:0 "너무도 많은 피를 흘리다"
-AST_bled_dry_desc:0 우리는 대전기에 모든 것을 쏟아 부었고, 결판이 났다. 거의 모든 사람들이 결국엔 아무 의미 없이 고향에서 멀리 떨어진 곳에서 죽어나간 사람이 있다는 것을 알고 있고, 그것이 절대적으로 필요하지 않는 한 그런 일이 일어나는 것을 다시는 보고 싶어 하지 않습니다."
+AST_bled_dry_desc:0 "우리는 대전기에 모든 것을 쏟아 부었고, 결판이 났다. 거의 모든 사람들이 결국엔 아무 의미 없이 고향에서 멀리 떨어진 곳에서 죽어나간 사람이 있다는 것을 알고 있고, 그것이 절대적으로 필요하지 않는 한 그런 일이 일어나는 것을 다시는 보고 싶어 하지 않습니다."
 AST_anzac_spirit_1:0 "ANZAC의 정신"
 AST_anzac_spirit_1_desc:0 "대전기에, 오스트레일리아와 뉴질랜드 출신들은 가장 공격적이었으며, 의심스러운 규율에도 불구하고 그들의 조직을 유지했습니다. 의심할 여지 없이 그들은 도를 넘을 정도로 다루기 어려웠지만, 그들은 막상 전투를 즐겼습니다. 그들은 강인함과 감정적임의 흥미로운 조화였습니다."
 AST_anzac_spirit_2:0 "ANZAC의 정신"
