--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -1,65 +1,65 @@
 l_english:
 
 ### Flags ###
-HOL_crisis:0 "Black Monday has struck the Netherlands"
-hol_putsch:0 "Reijnders' putsch has succeeded"
-hol_coalition_cna_lsp:0 "CNA-LSP coalition government exists"
-hol_cna_government:0 "CNA government exists"
-hol_modleft:0 "Moderate Left government exists or is forming"
-hol_radicalleft:0 "Radical Left government exists or is forming"
-HOL_radicalright:0 "Radical Right government exists or is forming"
-hol_modright:0 "Moderate Right government exists or is forming"
-hol_coalition_cna_vnh:0 "CNA-VNH coalition government exists"
-hol_coalition_vnh_cna:0 "VNH-CNA coalition government exists"
-hol_liberals:0 "LSP government exists"
-hol_vnh_dictatorship:0 "VNH dictatorship exists"
-hol_junta_consolidated:0 "Junta-led government exists"
-hol_binnenhof_burning:0 "The Binnenhof has been burned down"
-hol_coalition_sdap_vdb:0 "SDAP-VDB coalition government exists"
-hol_coalition_sdap_rsap:0 "SDAP-RSAP coalition government exists"
-hol_sdap_syndielegalized:0 "SDAP allowed to partake in elections"
-HOL_patriotten_majority:0 "Patriotten electoral majority"
-HOL_cc_majority:0 "KAPN electoral majority"
-HOL_nas_majority:0 "NAS electoral majority"
-HOL_rsap_majority:0 "RSAP electoral majority"
-hol_sdap_majority:0 "SDAP electoral majority"
-hol_leftwing_negotiations_failed:0 "Negotiations with the leftists failed"
-hol_gele_kerken:0 "Van Geelkerken's coup succeeded"
-hol_geen_gele_kerken:0 "Van Geeklkerken's coup failed"
+HOL_crisis:0 "검은 월요일이 네덜란드를 강타하다"
+hol_putsch:0 "레인데르스가 정부를 전복시키다"
+hol_coalition_cna_lsp:0 "CNA-LSP 연립 정부 출범"
+hol_cna_government:0 "CNA 정부 출범"
+hol_modleft:0 "중도주의 좌파 정부 출범/형성 중"
+hol_radicalleft:0 "극단주의 좌파 정부 출범/형성 중"
+HOL_radicalright:0 "극단주의 우파 정부 출범/형성 중"
+hol_modright:0 "중도주의 우파 정부 출범/형성 중"
+hol_coalition_cna_vnh:0 "CNA-VNH 연립 정부 출범"
+hol_coalition_vnh_cna:0 "VNH-CNA 연립 정부 출범"
+hol_liberals:0 "LSP 정부 출범"
+hol_vnh_dictatorship:0 "VNH 독재 정부 출범"
+hol_junta_consolidated:0 "군사 정부 출범"
+hol_binnenhof_burning:0 "빈넨호프가 불타다"
+hol_coalition_sdap_vdb:0 "SDAP-VDB 연립 정부 출범"
+hol_coalition_sdap_rsap:0 "SDAP-RSAP 연립 정부 출범"
+hol_sdap_syndielegalized:0 "SDAP가 출마를 허가받다"
+HOL_patriotten_majority:0 "애국당의 선거 우세"
+HOL_cc_majority:0 "KAPN의 선거 우세"
+HOL_nas_majority:0 "NAS의 선거 우세"
+HOL_rsap_majority:0 "RSAP의 선거 우세"
+hol_sdap_majority:0 "SDAP의 선거 우세"
+hol_leftwing_negotiations_failed:0 "좌익들과의 협상이 실패하다"
+hol_gele_kerken:0 "반 힐케르켄의 쿠데타가 성공하다"
+hol_geen_gele_kerken:0 "반 힐케르켄의 쿠데타가 실패하다"
 
 ### Ideas ###
-HOL_mech_troops:0 "Mechanised Infantry"
-HOL_mech_troops_desc:0 "Our land is flat and our people are mighty. Clearly mechanised infantry divisions are the future of our armed forces!"
-HOL_marine_troops:0 "Korps Mariniers"
-HOL_marine_troops_desc:0 "The Korps Mariniers, as befitting the pride maritime history of our nation, consists of some of the finest marine forces in the world."
-HOL_werkverschaffing:0 "Werkverschaffing"
-HOL_werkverschaffing_desc:0 "To combat the crisis of rampant unemployment unleashed by Black Monday, the government has decided to expand its labour programme."
-HOL_labourreforms:0 "Limited Labour Reforms"
-HOL_labourreforms_desc:0 "Continuing criticism by socialists and leftists has caused the government to act to stamp out this irritation and institute some minor labour reforms."
-HOL_expand_veldleger:0 "Expand Velderleger"
-HOL_expand_veldleger_desc:0 "The Dutch military has always had trouble finding enough willing recruits. With so many unemployed, we can use incentives to entice people to join our armed forces."
-HOL_idea_strict_weapon_laws:0 "Strict Weapon Laws"
-HOL_idea_strict_weapon_laws_desc:0 "We have implemented strict weapon restrictions to improve stability in our nation, extending required training time and imposing further regulatory requirements on suppliers and users."
-HOL_idea_floating_airfield:0 "Floating Airfields"
-HOL_idea_floating_airfield_desc:0 "Innovation is criticial if our nation is to survive the conflicts to come."
-HOL_ideas_airplane_radar:0 "Adopt Radar"
-HOL_ideas_airplane_radar_desc:0 "The newest major development in modern warfare is radar, a system that is vital to our nation's security both at air and at sea."
-HOL_vesting_holland_construction:0 "Construction of Vesting Holland"
-HOL_vesting_holland_construction_desc:0 "There is only one way to protect our nation, and that is by making our foe struggle for every inch of Dutch soil."
-HOL_idea_instability:0 "Brawling on the Streets"
-HOL_idea_instability_above_50:0 "Brawling on the Streets"
-HOL_idea_instability_desc:0 "Far-left and far-right elements are fighting on the streets. For now they are dampening eachothers effects but if either side becomes too powerful or the situation becomes too unstable our regime may be toppled."
-HOL_idea_instability_above_50_desc:0 "Far-left and far-right elements are fighting on the streets. For now they are dampening eachothers effects but if either side becomes too powerful or the situation becomes too unstable our regime may be toppled."
-HOL_idea_mobilisation_timetables:0 "Mobilisation Timetables"
-HOL_idea_mobilisation_timetables_desc:0 "By making more efficient use of timetables in the mobilisation process we can make the process faster and less bothersome."
+HOL_mech_troops:0 "기계화 보병"
+HOL_mech_troops_desc:0 "우리의 땅은 평지이고, 우리 민족은 강합니다. 기계화된 보병 사단이야말로 우리 군의 미래입니다!"
+HOL_marine_troops:0 "해병대"
+HOL_marine_troops_desc:0 "우리 나라의 자랑스러운 해양 역사에 걸맞게, 네덜란드 해병대는 세계 최강의 해병대 중 하나입니다."
+HOL_werkverschaffing:0 "고용 창출"
+HOL_werkverschaffing_desc:0 "검은 월요일에 의한 걷잡을 수 없는 실업 위기를 막기 위해 정부는 노동 체계를 확장하기로 결정했습니다."
+HOL_labourreforms:0 "제한적인 노동 개혁"
+HOL_labourreforms_desc:0 "사회주의자들과 좌파들의 계속되는 비난에 정부는 이들의 분노를 가라앉히기 위해 제한적인 노동 개혁을 실시하게 되었습니다."
+HOL_expand_veldleger:0 "야전군 확장"
+HOL_expand_veldleger_desc:0 "네덜란드군은 항상 인력 면에서 어려움을 겪어 왔습니다. 하지만 이렇게나 많은 실업자들이 있는 지금, 우리는 사람들이 우리 군에 입대하도록 권유할 수 있습니다."
+HOL_idea_strict_weapon_laws:0 "엄격한 무기법"
+HOL_idea_strict_weapon_laws_desc:0 "우리는 우리 나라의 안정성을 개선하기 위해 엄격한 무기 제한을 시행하여 총기 소유 허가를 받는 데 필요한 훈련 시간을 연장하고 공급 업체와 사용자에게 추가적인 규제를 가하고 있습니다."
+HOL_idea_floating_airfield:0 "떠다니는 비행장"
+HOL_idea_floating_airfield_desc:0 "우리 나라가 앞으로 발생할 분쟁에서 살아남으려면 혁신이 대단히 중요합니다."
+HOL_ideas_airplane_radar:0 "레이더 채택"
+HOL_ideas_airplane_radar_desc:0 "현대전의 가장 주요한 발전은 바로 레이더인데, 레이더는 공중과 해상 모두에서 우리 나라의 안보에 필수적인 시스템입니다."
+HOL_vesting_holland_construction:0 "네덜란드 요새 건설"
+HOL_vesting_holland_construction_desc:0 "우리의 조국을 지키는 방법은 오직 하나이며, 그것은 우리의 적이 모든 네덜란드 영토의 구석 구석을 하나씩 차지하기 위해 싸울 수밖에 없도록 만드는 것입니다."
+HOL_idea_instability:0 "혼란스러운 거리"
+HOL_idea_instability_above_50:0 "혼란스러운 거리"
+HOL_idea_instability_desc:0 "극좌 세력과 극우 세력이 거리에서 싸움을 벌이고 있습니다. 현재 그들은 팽팽히 대립하고 있지만, 어느 한쪽이 너무 강력해지거나 상황이 너무 불안정해지면 우리의 정권은 전복될 수도 있습니다."
+HOL_idea_instability_above_50_desc:0 "극좌 세력과 극우 세력이 거리에서 싸움을 벌이고 있습니다. 현재 그들은 팽팽히 대립하고 있지만, 어느 한쪽이 너무 강력해지거나 상황이 너무 불안정해지면 우리의 정권은 전복될 수도 있습니다."
+HOL_idea_mobilisation_timetables:0 "동원 통계"
+HOL_idea_mobilisation_timetables_desc:0 "동원 과정에서 일정 및 계획을 더 효율적으로 짤 수 있도록 함으로써 동원 과정을 더 빠르고 덜 번거롭게 만들 수 있습니다."
 
 
 ### Political ideas ###
-HOL_idea_ambtenarenverbod:0 "Ambtenarenverbod"
-HOL_idea_ambtenarenverbod_desc:0 "The 'Ambtenarenverbod' or Civil Servant Ban, blocks government officials from joining any far-left groups or the Landwacht, in the hopes of halting the momentum of these undemocratic ideologies."
-HOL_idea_ambtenarenverbod_01:0 "Ambtenarenverbod"
+HOL_idea_ambtenarenverbod:0 "공무원 규제령"
+HOL_idea_ambtenarenverbod_desc:0 "공무원 규제령은 민주주의 가치에 반하는 사상의 성장을 중단하려는 의도로 계획되었으며, 정부 관리들이 어떠한 극좌 또는 극우 성향의 단체에도 가입하지 못하도록 합니다."
+HOL_idea_ambtenarenverbod_01:0 "공무원 규제령"
 HOL_idea_ambtenarenverbod_01_desc:0 "The 'Ambtenarenverbod' or Civil Servant Ban, blocks government officials from joining any far-left or far-right groups, in the hopes of halting the momentum of these undemocratic ideologies."
-HOL_idea_ambtenarenverbod_02:0 "Ambtenarenverbod"
+HOL_idea_ambtenarenverbod_02:0 "공무원 규제령"
 HOL_idea_ambtenarenverbod_02_desc:0 "The 'Ambtenarenverbod' or Civil Servant Ban, blocks officials from joining any far-left groups, in the hopes of halting the momentum of these undemocratic ideologies."
 HOL_idea_transition_to_fair_economy:0 "Transition to a Fair Economy"
 HOL_idea_transition_to_fair_economy_desc:0 "It is difficult to create a system that works for everyone, there is no doubt about that. All the same, the venerable Dutch spirit can manage this intense period of economic transition."
@@ -67,11 +67,11 @@ HOL_idea_market_socialism:0 "Market Syndicalism"
 HOL_idea_market_socialism_desc:0 "Just because there is a new leftist order in Holland doesn't mean that we should cast aside all of our old trappings. After all, the markets incentivise workers in many fields, including construction."
 HOL_idea_february_strike:0 "February Strikes"
 HOL_idea_february_strike_desc:0 "Our country is suffering from a turbulent period of strike actions, paralysing much of our industry."
-HOL_idea_peoples_military:0 "The People's Army"
+HOL_idea_peoples_military:0 "인민의 군대"
 HOL_idea_peoples_military_desc:0 "There is a new order in the Netherlands, and our military now reflect its origins. It is made up of people, and for the people."
 HOL_idea_union_of_the_military:0 "Union of the Military"
 HOL_idea_union_of_the_military_desc:0 "Our armed forces are filled with both comrades and reactionary officers. While the latter will turn with time, tolerating their continued service preserves the efficiency of our training camps."
-HOL_idea_dutch_militia:0 "Dutch Militias"
+HOL_idea_dutch_militia:0 "네덜란드 민병대"
 HOL_idea_dutch_militia_desc:0 "We are a syndicalist power surrounded by those that wish to do us harm. Creating people's militias is vital if we are to survive."
 HOL_idea_labour_camps:0 "Labour Camps"
 HOL_idea_labour_camps_desc:0 "It is only through the joy of labour that reactionaries stand to assist us."
@@ -95,8 +95,8 @@ HOL_idea_neutrality:0 "Batavian Neutrality"
 HOL_idea_neutrality_desc:0 "After losing Belgium the former Netherlands once sought to limit its exposure to brutal European conflicts by declaring a policy of neutrality. The new Batavian Commune shall do the same."
 
 ### Special ###
-HOL_idea_batavian_courage:0 "Batavian Resistance"
-HOL_idea_batavian_courage_desc:0 "About 150 years ago, the Germans, then known as Prussians, destroyed Dutch democracy and reinstalled the Orange-Nassau family. Nowadays, they are doing so again, and we shall not allow them to do so insofar it's up to us!"
+HOL_idea_batavian_courage:0 "바타비아의 저항"
+HOL_idea_batavian_courage_desc:0 "약 150년 전, 당시 프로이센인들로 불리던 독일인들은 네덜란드의 민주주의를 파괴했고, 오라녜-나사우 왕실을 재옹립했습니다. 최근 그들은 다시 그렇게 하려 하고 있으며, 우리는 우리가 이렇게 서 있는 한 그들이 그렇게 하는 것을 허락하지 않을 것입니다!"
 
 ### Welfare State ###
 HOL_idea_welfare_state_0_0:0 "Welfare State"
@@ -168,19 +168,19 @@ HOL_idea_luchtvaartacademie:0 "Luchtvaartacademie Established"
 HOL_idea_luchtvaartacademie_desc:0 ""
 
 ### Focuses ###
-HOL_left_list_victorious:0 "Left List is Victorious"
+HOL_left_list_victorious:0 "좌파의 승리"
 HOL_left_list_victorious_desc:0 "The moderate left of Dutch politics has won the recent elections, granting them the initiative and political capital needed to form a new government."
-HOL_SDAP_RSAP:0 "SDAP-RSAP Coalition"
+HOL_SDAP_RSAP:0 "SDAP-RSAP 연립"
 HOL_SDAP_RSAP_desc:0 "The more centrist social democrats have formed a coalition with the radical socialists in order to be able to put their views into effect in full."
-HOL_VDB_SDAP:0 "VDB-SDAP Coalition"
+HOL_VDB_SDAP:0 "VDB-SDAP 연립"
 HOL_VDB_SDAP_desc:0 "The social democrats must work with their partners in the Lijst Links electoral alliance if they are to set up the first Dutch centre-left government."
-HOL_overthrow_the_system:0 "Overthrow the System!"
+HOL_overthrow_the_system:0 "체제를 전복시켜라!"
 HOL_overthrow_the_system_desc:0 "The parliamentary system of the Netherlands is obsolete! Let us abolish the current system in favour of a more radical solution."
-HOL_use_popular_mandate:0 "Use the Popular Mandate"
+HOL_use_popular_mandate:0 "국민의 신임"
 HOL_use_popular_mandate_desc:0 "The people have given us their trust to repair the nation. With them having been granted their wish, we should work within the system to reform it."
-HOL_revoke_ambtenarenverbod_vdb:0 "Revoke the Ambtenarenverbod"
+HOL_revoke_ambtenarenverbod_vdb:0 "공무원 규제령 해제"
 HOL_revoke_ambtenarenverbod_vdb_desc:0 "Though perhaps it was suitable for its day, the Ambtenarenverbod has proven itself relatively effective in insulating Dutch politics from extremist. We should abolish it and let civil servants engage with democracy once again."
-HOL_revoke_ambtenarenverbod:0 "Revoke the Ambtenarenverbod"
+HOL_revoke_ambtenarenverbod:0 "공무원 규제령 해제"
 HOL_revoke_ambtenarenverbod_desc:0 "The Ambtenarenverbod was a flawed attempt by Colijn to stop the rise of syndicalism in the Netherlands. With a serious left-wing coalition in power, it is time for us to repeal this obsolete mess!"
 HOL_amend_wapenwet:0 "Amend the Wapenwet"
 HOL_amend_wapenwet_desc:0 "Currently weapons are quite easily obtainable in the Netherlands, a serious concern in these politically turbulent times. If we were to tighten up our weapons legislation, it would help us limit the casualties of civil violence."
@@ -210,41 +210,41 @@ HOL_progressive_tax_system:0 "Progressive Tax System"
 HOL_progressive_tax_system_desc:0 "We are to tax the rich more than the poor if we are to be able to fund the welfare state we are envisioning and increase equality, even if the rich will not like such a move."
 HOL_close_pillar_institutions:0 "Close Pillar Institutions"
 HOL_close_pillar_institutions_desc:0 "It is time we end this pillarised society. Someone who is Protestant will only listen to Protestant radio as it is. Let us end these rifts by closing down the Catholic, Liberal, Protestant and even Socialist news media!"
-HOL_have_the_RNF_disband:0 "Disband the Red Front"
+HOL_have_the_RNF_disband:0 "붉은 전선 해체"
 HOL_have_the_RNF_disband_desc:0 "The Red Front was initially founded to protect the worker against the police in the hands of the capitalists, and later the Landwacht of the VNH. Now that the workers' rights have been secured these unsavoury elements are no longer needed."
-HOL_we_are_all_brothers:0 "Brothers All!"
+HOL_we_are_all_brothers:0 "모두가 형제이다!"
 HOL_we_are_all_brothers_desc:0 "Everyone in the Netherlands is Dutch, and thus we are brethren - no matter their political allegiances. Let us help each other, one Dutchman to another."
-HOL_national_dutch_broadcasting_station:0 "National Dutch Broadcaster"
+HOL_national_dutch_broadcasting_station:0 "국립 네덜란드 방송국"
 HOL_national_dutch_broadcasting_station_desc:0 "With the closure of all major broadcasting stations as part of our depillarisation efforts, it is time for us to launch one station for all Dutch, one that represents us all!"
-HOL_socialist_paradise:0 "Socialist Paradise"
+HOL_socialist_paradise:0 "사회주의자의 낙원"
 HOL_socialist_paradise_desc:0 "Our policies have led to the creation of a socialist paradise. The right has been muted and the nation is stable! Let us celebrate the fate of the Dutch worker!"
-HOL_pensions_for_the_elderly:0 "State Pensions"
+HOL_pensions_for_the_elderly:0 "국민 연금"
 HOL_pensions_for_the_elderly_desc:0 "An essential part of the new Dutch welfare state will be that the elderly will be able to retire with a minimum standard of living, thanks to the contribution of those that continue working."
-HOL_sick_leave:0 "Sick Leave Legislation"
+HOL_sick_leave:0 "질병 휴가법 제정"
 HOL_sick_leave_desc:0 "Employers should allow people who are not well to stay home for some time, as it is the humane thing to do. Sadly, not everyone seems to agree, so we'll need to make it mandatory."
-HOL_lowered_tuition_fees:0 "Subsidised Tuition"
+HOL_lowered_tuition_fees:0 "장학금 지급"
 HOL_lowered_tutition_fees_desc:0 "Nothing helps social mobility more than making it possible for those with the capacity to receive the schooling they need. Henceforth the future will determine your fate instead of the past."
-HOL_mandatory_insurance:0 "Mandatory Health Insurance"
+HOL_mandatory_insurance:0 "건강 보험 의무화"
 HOL_mandatory_insurance_desc:0 "Currently healthy people of young age usually do not take health insurance, resulting in very expensive insurance, resulting in some people who need cover being unable to pay for it. We ought to make it mandatory."
-HOL_twinkling_social_democracy:0 "Twinkling Social Democracy"
+HOL_twinkling_social_democracy:0 "사회민주주의의 빛"
 HOL_twinkling_social_democracy_desc:0 "Our policies have made the Netherlands a beacon in the world, and an example for all on how to build a proper welfare state."
-HOL_entice_christian_progressives:0 "Entice Christian Progressives"
+HOL_entice_christian_progressives:0 "기독교 세력의 진보 조장"
 HOL_entice_christian_progressives_desc:0 "Many Christian progressives vote for the conservatives simply because they are Christian. Part of the Doorbraak policy will be incentivising them to actually vote for the left-wing parties that they secretly admire."
-HOL_the_united_state:0 "The United State"
+HOL_the_united_state:0 "합중국"
 HOL_the_united_state_desc:0 "We ought to show unity at all times. Let us stand united as Dutchmen versus the world."
-HOL_foreign_policy:0 "Dutch Foreign Policy"
+HOL_foreign_policy:0 "네덜란드 외교 정책"
 HOL_foreign_policy_desc:0 "Now that we have stabilised our political order, it is time to look outwards again and examine whether we should re-emphasise our self-imposed neutrality or find allies in this new hostile world."
-HOL_join_mitteleuropa:0 "Join the Reichspakt"
+HOL_join_mitteleuropa:0 "Reichspakt에 가입"
 HOL_join_mitteleuropa_desc:0 "Ever since the Boer War, we have been drifting towards the German cause, and if the Reichspakt falls to the godless syndicalists then we are likely finished as well. Let us fight for our own fate instead of having it forced upon us!"
-HOL_sustain_neutrality:0 "Proclaim Neutrality"
+HOL_sustain_neutrality:0 "중립국 선언"
 HOL_sustain_neutrality_desc:0 "The Netherlands suffers from enough troubles without joining a devastating global conflict. We shall work with whomever reigns supreme after the conflict, as we have done many times before."
-HOL_join_entente:0 "Join the Entente"
+HOL_join_entente:0 "협상국에 가입"
 HOL_join_entente_desc:0 "The Entente long seemed an unlikely choice for an alliance. The British struggle in South Africa ensured a negative view of the United Kingdom permeated throughout all layers of Dutch society. The world turns, however, and changing geopolitics means our stance must shift."
-HOL_join_internationale:0 "Join the Internationale"
+HOL_join_internationale:0 "인터내셔널에 가입"
 HOL_join_internationale_desc:0 "The revolution came to the Netherlands and has been entrenched. Thus the time has come for us to join the Internationale and help export the Revolution, aiding in the liberation the working class beyond merely our own tiny country."
-HOL_relations_south_africa:0 "The South African Question"
+HOL_relations_south_africa:0 "남아프리카 문제"
 HOL_relations_south_africa_desc:0 "South Africa is populated by a number of Dutch-descent Boers, making its political fate in this troubled times particularly concerning to our own domestic political scene. There have been a number of calls from all sides of the left-right spectrum to consider our approach."
-HOL_aftermath_black_monday:0 "Aftermath of Black Monday"
+HOL_aftermath_black_monday:0 "검은 월요일의 여파"
 HOL_aftermath_black_monday_desc:0 "Black Monday shockwaves have hit the Dutch economy hard. It is clear that the government will be forced to take immediate and drastic action to avoid the economy breaking down completely."
 HOL_plan_for_labour:0 "Plan for Labour"
 HOL_plan_for_labour_desc:0 "Het Plan van de Arbeid, or 'Plan for labour' is a social-democratic strategy to deal with the fallout of Black Monday by committing to large public works and government spending in order to combat rising unemployment."
