--- a/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ottoman_l_english.yml
@@ -371,7 +371,7 @@ ott.11.a:0 "그들의 독립을 인정하자 우리는 이미 패배했다..."
 ott.11.b:0 "계속 싸워라!"
 
 ott.12.t:0 "민족 주의자 반군 성공"
-ott.12.d:0 "이것은 대단한 승리입니다만, 왜 아무도 실제로  않는 애매한 wehraboo 모드에서 숨겨진 이벤트의 현지화 파일 항목을 읽는 중입니까?"
+ott.12.d:0 "이것은 대단한 승리입니다만, 왜 아무도 실제로 플레이 하지 않는 애매한 wehraboo 모드에서 숨겨진 이벤트의 현지화 파일 항목을 읽는 중입니까?"
 ott.12.a:0 "오, 네가 날 잡았구나 :DDDD"
 
 ott.13.t:0 "전쟁 전의 현상 유지"
