--- a/Kaiserreich Korean Translation/localisation/KR_Micro_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Micro_l_english.yml
@@ -1,32 +1,32 @@
 ﻿l_english:
 
 ### Opinion Modifiers ###
-liechtenstein_leaves:0 "Liechtenstein Left Us"
+liechtenstein_leaves:0 "리히텐슈타인이 우릴 떠나다"
 
 ### Events ###
 micro.1.t:0 ""
 micro.1.d:0 ""
 micro.1.a:0 ""
 
-micro.2.t:0 "The Fate of Andorra"
-micro.2.d:0 "An interesting matter has come to our attention; that of the Principality of Andorra.\n\nThe Principality of Andorra was founded in 1278, but since 1607 has been linked to France, first through the royal family and later through various treaties. When the government fell to the Germans Andorra appealed to the Spanish for protection which was granted, officially signed into law in 1921.\n\nThey now lie within our control and it may be wroth integrating them into our nation; we surely can't leave them alone given their links to the old French and Spanish governments? Then again, is it really worth the trouble for such a small 'nation'?"
-micro.2.a:0 "They shall be part of Spain!"
-micro.2.b:0 "Leave them be."
+micro.2.t:0 "안도라의 운명"
+micro.2.d:0 "흥미로운 문제가 우리의 주목을 끌었습니다; 그건 바로 안도라 공국 문제입니다.\n\n안도라 공국은 1278년에 세워졌지만, 1607년 이후로는 초기에는 왕실을 통해, 나중에는 각종 조약을 통해 프랑스와 이어져 있었습니다. 독일이 프랑스 정부를 무너트리자, 1921년에 안도라는 스페인에 공식적인 보호를 요쳥해왔습니다. \n\n그들은 지금 우리의 통제 하에 있고 그들을 우리 나라에 통합하는 것은 잘못된 선택일 수 있습니다. 옛 프랑스 및 스페인 정부와의 연결 고리를 고려해 볼 때 그들을 그냥 내버려 두기는 힘들까요? 한편으로는, 이렇게 작은 '나라'를 위해 정말 고생할 가치가 있을까요?"
+micro.2.a:0 "안도라는 스페인의 일부가 되어야 한다!"
+micro.2.b:0 "떠나게 둬라."
 
-micro.3.t:0 "Peace With Andorra"
+micro.3.t:0 "안도라와의 평화"
 micro.3.d:0 "The Principality of Andorra joined the war against us in support of France, but after their defeat Andorra had no ties with the new Commune and aligned itself with Spain, officially signing a protection treaty in 1921.\n\n However, that treaty didn't annul their declaration of war against us, and in fact, nor has any treaty since. Several diplomats have been working to resolve this strange circumstance and now we have a peace deal ready to be signed, it is but a formality of course."
-micro.3.a:0 "Of course."
+micro.3.a:0 "물론."
 
-micro.4.t:0 "Monaco Reborn?"
+micro.4.t:0 "모나코의 재탄생?"
 micro.4.d:0 "An interesting proposal has reached us; recreating the Principality of Monaco.\n\nSince 1860 they have been independent and free, but after we were pushed out of the mainland the Commune saw fit to remove their sovereignty and integrate them.\n\nThere is no reason to reverse this of course and it would be easier to leave things be, but then again, it could work to our benefit to show the French people we aren't like the Commune and will work to undo every unjust act they committed. It should also be noted that their hair to throne fought for us in the Weltkrieg and perhaps we should reward that service."
-micro.4.a:0 "What a good idea!"
+micro.4.a:0 "좋은 생각이군!"
 micro.4.b:0 "It is not worth the trouble."
 
-micro.5.t:0 "Liechtenstein Asks for Protection"
+micro.5.t:0 "리히텐슈타인이 보호를 요청하다"
 micro.5.d:0 "We have just received a diplomatic envoy from Principality of Liechtenstein. With the fall of the Austrian empire they are asking us for protection.\n\nThe Principality of Liechtenstein is the final remnant of the Holy Roman Empire and due to its unique geographic location has survived until now. Since 1818 they have been under the protection of Austria, first through the German Confederation and later through bi-lateral treaties.\n\nBut given Austria is defeated Liechtenstein now asks for out protection; what is our reply?"
 micro.5.a:0 "We would be happy to help."
 micro.5.b:0 "It is best to not get involved."
 
-micro.6.t:0 "A Visit From Liechtenstein"
+micro.6.t:0 "리히텐슈타인으로부터의 방문"
 micro.6.d:0 "We have just received a state visit from Principality of Liechtenstein.\n\nThe Principality of Liechtenstein is the final remnant of the Holy Roman Empire and due to its unique geographic location, has survived up to now. Since 1818 they have been under our protection, first through our leadership of the German Confederation and later through bi-lateral treaties.\n\nPrince Franz has stepped down from the throne and named his 31-year-old first cousin twice removed as regnant. To celebrate the occasion they have brought us gifts and good wishes, in turn we have given the new prince gifts and wished him a long and happy reign."
 micro.6.a:0 "How lovely."
