--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -907,7 +907,7 @@ annex.228.a:0 "Liberate a loyal Tannu Tuva!"
 annex.229.t:0 "로마의 운명"
 annex.229.d:0 "With our troops in control of the eternal city and the surrounding territories, the question of the administration of the area was raised. While creating an Italian government could give us voice on the peninsula, the restoration of the Papal States is demanded by the Holy See and the higher clergy."
 annex.229.a:0 "이탈리아 공화국을 해방하라"
-annex.229.b:0 "이탈리아 하회주의 공화국을 해방하라"
+annex.229.b:0 "이탈리아 회주의 공화국을 해방하라"
 annex.229.c:0 "교황령을 해방하라"
 annex.229.e:0 "Give the territory to our loyal socialist friends"
 annex.229.f:0 "Give the territory to our loyal Italian friends"
