--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -208,7 +208,7 @@ balticduchy.99.b:0 "The Kaiser is angry at the Duke!"
 balticduchy.100.t:0 "독일 황제가 분노하다!"
 balticduchy.100.d:0 "After the Kaiser has expressed his disagreement over the type of administration in the Baltic Federation, the majority of Germans feel that the Baltic Federation must stay on its democratic course and friendship with Germany. Many of them however think of this is a good excuse to revert everything which has been done."
 balticduchy.100.a:0 "모든 걸 원상복귀 시켜라!"
-balticduchy.100.b:0 "독일 황제에게 이는 발트 연합 공국의 더 나은 미래를 위함이라고 전해드려라!"
+balticduchy.100.b:0 "독일 황제에게 이는 발트 연방의 더 나은 미래를 위함이라고 전해드려라!"
 
 balticduchy.120.t:0 "동부 방벽 개선"
 balticduchy.120.d:0 "Our diligent engineers and soldiers have completed another part of the fortification line along the borders of United Baltic Duchy and Russia. Shall we continue with its expansion or are such fortifications sufficient?"
