--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -69,15 +69,15 @@ balticduchy.51.a:0 "협상을 시작하라"
 balticduchy.51.b:0 "그들은 아무것도 받을 자격이 없다!"
 
 balticduchy.52.t:0 "쿠를란트에서의 반란"
-balticduchy.52.d:0 "쿠를란트의 지방민들과 몇몇 도시민들이 독일인들에 맞서 봉기하기로 결정했습니다. 다행히, 반란은 몇몇 지방에서만 일어났으며 쉽게 진압될 것입니다."
+balticduchy.52.d:0 "쿠를란트의 지방민들과 몇몇 도시민들이 독일인들에 맞서 봉기하기로 결정했습니다. 다행히, 반란은 몇몇 지역에서만 일어났으며 쉽게 진압될 것입니다."
 balticduchy.52.a:0 "반대자들을 분쇄하라!"
 
 balticduchy.53.t:0 "리블란트에서의 반란"
-balticduchy.53.d:0 "리블란트의 지방민들과 몇몇 도시민들이 독일인들에 맞서 봉기하기로 결정했습니다. 다행히, 반란은 몇몇 지방에서만 일어났으며 쉽게 진압될 것입니다."
+balticduchy.53.d:0 "리블란트의 지방민들과 몇몇 도시민들이 독일인들에 맞서 봉기하기로 결정했습니다. 다행히, 반란은 몇몇 지역에서만 일어났으며 쉽게 진압될 것입니다."
 balticduchy.53.a:0 "반대자들을 분쇄하라!"
 
 balticduchy.54.t:0 "에스틀란트에서의 반란"
-balticduchy.54.d:0 "에스틀란트의 지방민들과 몇몇 도시민들이 독일인들에 맞서 봉기하기로 결정했습니다. 다행히, 반란은 몇몇 지방에서만 일어났으며 쉽게 진압될 것입니다."
+balticduchy.54.d:0 "에스틀란트의 지방민들과 몇몇 도시민들이 독일인들에 맞서 봉기하기로 결정했습니다. 다행히, 반란은 몇몇 지역에서만 일어났으며 쉽게 진압될 것입니다."
 balticduchy.54.a:0 "반대자들을 분쇄하라!"
 
 balticduchy.70.t:0 "Nationalist Movements Agitating!"
