--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -1494,7 +1494,7 @@ gerfor.117.t:0 "코사크가 재협상 조약을 수락하다"
 gerfor.117.d:0 "군사적 지원 제안은 코사크가 관심을 가진 것과 정확히 같았습니다. 그들은 우리의 외교관이 새로 제안한 것에 동의했습니다. 독일 육군이 그들의 군대를 훈련시켜주는 대가로 돈 쿠반은 석유 공급을 보장할 것입니다."
 gerfor.117.a:0 "그들은 분명히 더 좋은 것을 원한다."
 
-gerfor.118.t:0 "코사크가 재협상 조약 거부하다"
+gerfor.118.t:0 "코사크가 재협상 조약을 거부하다"
 gerfor.118.d:0 "군사적 지원을 하겠다는 두번째 제안과 회담장에서 독일의 다양한 양보에도 불구하고 코사크인들은 우리와 함께 일하는 데 관심이 없었습니다. 그들은 우리의 호의를 일축하고 더 양보할 것을 요구함으로써 합의 가능성을 낮췄습니다."
 gerfor.118.a:0 "정말 고집불통이군."
 
