--- a/Kaiserreich Korean Translation/localisation/KR_Gabon_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Gabon_l_english.yml
@@ -8,7 +8,7 @@ GAB_Petition_French_Republic_desc:0 "가봉에는 무기가 필요하며, 이곳
 GAB_Petition_French_Commune:0 "프랑스 코뮌에 요청"
 GAB_Petition_French_Commune_desc:0 "코뮌이 가봉의 어려움에 동정할 지도 모릅니다."
 GAB_Open_Recruitment_Program:0 "공채 판매"
-GAB_Open_Recruitment_Program_desc:0 "지금 가봉은 최전에 가능한 한 모든 지원을 해야 합니다!"
+GAB_Open_Recruitment_Program_desc:0 "지금 가봉은 최전선에 가능한 한 모든 지원을 해야 합니다!"
 GAB_independence_push:0 "독립 운동"
 GAB_independence_push_desc:0 "가봉은 처음으로 자유를 맛봤으며, 이처럼 쉽게 독립할 기회를 포기하지 않을 것입니다!"
 GAB_Declaration_of_Independence:0 "독립 선언"
